<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MenYou</string>
    <string name="hint_email">Email</string>
    <string name="hint_emailR">Ripeti Email</string>
    <string name="hint_passwordR">Ripeti Password</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_insert">INSERISCI</string>
    <string name="btn_edit">MODIFICA</string>
    <string name="btn_edit_portata">Modifica Portata</string>
    <string name="btn_link_to_register_client">Non sei registrato? Iscriviti ora.</string>
    <string name="btn_link_to_register_restaurateur">Vuoi inserire un Menu? Iscriviti ora.</string>
    <string name="btn_link_to_facebook">Login con Facebook</string>
    <string name="btn_link_to_login">Sei registrato! Fai il Login.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="hint_nameRestaurant">Nome Ristorante</string>
    <string name="hint_nameMenu">Nome Menu</string>
    <string name="hint_namePortata">Nome Portata</string>
    <string name="hint_categoriaPortata">Categoria</string>
    <string name="hint_descrizionePortata">Descrizione</string>
    <string name="hint_prezzoPortata">Prezzo</string>
    <string name="hint_opzioniPortata">Opzioni</string>
    <string name="hint_disponibilePortata">Portata disponibile</string>
    <string name="hint_fotoPortata">Foto</string>
    <string name="hint_restaurantAddress">Indirizzo</string>
    <string name="hint_partitaIva">Partita Iva</string>
    <string name="hint_sitoWeb">Sito Web</string>
    <string name="hint_restaurantEmail">Email</string>
    <string name="hint_restaurantTel">Telefono</string>
    <string name="title_activity_main_ristorante">MainRistoranteActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_cliente">MainClienteActivity</string>
    <string name="registra_attivita">Registra nuova attività</string>
    <string name="modifica_account">Modifica Account</string>
    <string name="registra_cliente">Registra nuovo cliente</string>
    <string name="tutorial_name">Tutorial</string>
    <string name="Insert_menu_name">Inserisci Menu</string>
    <string name="insert_menu">Inserisci nuovo Menu</string>
    <string name="edit_menu">Modifica Menu</string>
    <string name="no_menu">Non è presente alcun menu.</string>

    <string name="insert_portata">Inserisci nuova Portata</string>
    <string name="Insert_portata_name">Inserisci Portata</string>

    <string name="facebook_app_id">1046817178707165</string>
    <string name="title_activity_tutorial">TutorialActivity</string>

    <string name="select_category">Seleziona Categoria</string>

    <string name="title_activity_portata">Portate Menu</string>
    <string name="title_activity_portata_activity_ristorante">Portate Menu</string>
    <string name="title_activity_portata_dettaglio">Dettaglio Portata</string>
    <string name="title_activity_portata_dettaglio_ristorante">Dettaglio Portata</string>
    <string name="title_activity_edit_menu">Modifica Menu</string>
    <string name="title_activity_ristorante_dettaglio">Dettaglio Ristorante</string>
    <string name="title_activity_edit_account">Modifica Account</string>
    <string name="title_activity_edit_portata">Modifica Portata</string>
    <string name="title_activity_maps">Mappa Ristoranti</string>
    <string name="title_activity_menuristorante">Menu Ristorante</string>
    <string name="title_activity_preferiti">Preferiti</string>

    <!-- Tutorial String -->

    <string name="next">AVANTI</string>
    <string name="skip">SALTA</string>
    <string name="start">FINITO</string>

    <string name="slide_1_title">Inserisci le credenziali</string>
    <string name="slide_1_desc">Effettua il login o registrati al circuito di MenYou</string>

    <string name="slide_2_title">Aggiungi un menu</string>
    <string name="slide_2_desc">Dal menu laterale seleziona "Aggiungi menu"</string>

    <string name="slide_3_title">Crea il menu</string>
    <string name="slide_3_desc">Digita il nome del tuo menu e fai tap su inserisci per crearlo</string>

    <string name="slide_4_title">Inserisci una portata!</string>
    <string name="slide_4_desc">Compila i campi ed inserisci la prima portata del menu</string>

    <string name="slide_5_title">I tuoi menu</string>
    <string name="slide_5_desc">Nella schermata principale troverai i menu da te inseriti che potrai modificare o eliminare</string>

    <string name="slide_6_title">Le tue portate</string>
    <string name="slide_6_desc">Entrando all interno del menu puoi visualizzarne le portate ed inserirne di nuove</string>

    <string name="slide_7_title">Modifica una portata</string>
    <string name="slide_7_desc">Facendo tap su una portata puoi visualizzarne i dettagli e decidere se modificarla o eliminarla</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- Tutorial String end -->

</resources>