<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.alfacast.menyou.client.EditAccountClienteActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/btn_login_bg"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_menu_add"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.alfacast.menyou.client.EditAccountClienteActivity">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:visibility="visible"
            android:weightSum="1"
            android:id="@+id/layout_account_cliente">

            <TextView
                android:id="@+id/uid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nome"
                android:id="@+id/textView"
                android:layout_gravity="left|center_horizontal"
                android:textSize="18dp"
                android:layout_marginBottom="5dp" />

            <EditText
                android:id="@+id/nameCliente"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/hint_name"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:id="@+id/textView4"
                android:layout_gravity="left|center_horizontal"
                android:textSize="18dp"
                android:layout_marginBottom="5dp" />

            <EditText
                android:id="@+id/ClienteEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/hint_restaurantEmail"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ripeti Email"
                android:id="@+id/textView5"
                android:layout_gravity="left|center_horizontal"
                android:textSize="18dp"
                android:layout_marginBottom="5dp" />

            <EditText
                android:id="@+id/ClienteEmailR"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/hint_emailR"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/ClientePassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/ClientePasswordR"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/hint_passwordR"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />


            <!-- Login Button -->

            <Button
                android:id="@+id/btnEditAccount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/btn_login_bg"
                android:text="@string/btn_edit"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>